--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,19 @@
 <resources>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="app_name">"Material Design ND "</string>
+    <string name="app_name">"Material Design ND"</string>
     <string name="action_settings">Settings</string>
     <string name="item_title">Palais Garnier</string>
     <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for the Paris Opera.</string>
-
-    <string name="siwaoasis">
-        Way out west,Siwa is the tranquil tonic to the hustle of Egypt's cities,
-            This gorgeous little oasis, surrounded by date palm plantations
-        and numerous fresh water springs, is one of the Western Desert's most picturesque spots.
-            The town is centered around the ruins of a vast mud-brick citadel that dominates the view.
-            This is a top spot to wind down and go slow for a few days as well as being an excellent base from which to plan adventures into the surrounding desert
-    </string>
+    <string name="siwaoasis">Way out west</string>
+    <string name="abusimbel">Abu Simbel</string>
+    <string name="abydostempleofosiris">Abydos Temple of osiris</string>
+    <string name="alexandria">Alexandria</string>
+    <string name="aswannile">Aswan Nile</string>
+    <string name="egyptianmuseum">Egyptian Museum</string>
+    <string name="stcatherinemonastery">StCatherines Monastery</string>
+    <string name="luxorskarnaktemple">Luxor Karnak Temple</string>
+    <string name="pyramids">Pyramids</string>
+    <string name="islamiccairo">Islamic Cairo</string>
+    <string name="southsinai">South Sinai</string>
+    <string name="whitedesert">White Desert</string>
 </resources>
