--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="app_name">"Material Design ND"</string>
+    <string name="app_name">"Tourisma"</string>
     <string name="action_settings">Settings</string>
     <string name="item_title">Palais Garnier</string>
     <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for the Paris Opera.</string>
